<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenDestinationActivity">

    <TextView
        android:id="@+id/activty_open_destination_tv_title"
        style="@style/HeaderTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/activity_destination_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_open_destination_img_logo" />

    <ImageView
        android:id="@+id/activity_open_destination_img_logo"
        android:layout_width="372dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/getting_warmer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/activity_open_destination_tv_info"
        style="@style/SubHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="64dp"
        android:text="@string/activity_open_destination_instruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activty_open_destination_tv_title" />

    <RadioGroup
        android:id="@+id/activity_open_destination_radiogroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_open_destination_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_open_destination_tv_info">

        <RadioButton
            android:id="@+id/activity_open_destination_rb_1"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_open_destination_option1" />

        <TextView
            android:id="@+id/activity_open_destination_tv_1"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="30dp"
            android:text="@string/activity_open_destination_option1_place" />


        <RadioButton
            android:id="@+id/activity_open_destination_rb_2"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_open_destination_option2" />

        <TextView
            android:id="@+id/activity_open_destination_tv_2"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="30dp"
            android:text="@string/activity_open_destination_option2_place" />

        <RadioButton
            android:id="@+id/activity_open_destination_rb_3"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_open_destination_option3" />

        <TextView
            android:id="@+id/activity_open_destination_tv_3"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="30dp"
            android:text="@string/activity_open_destination_option3_place" />

        <RadioButton
            android:id="@+id/activity_open_destination_rb_4"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_open_destination_option4" />

        <TextView
            android:id="@+id/activity_open_destination_tv_4"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingLeft="60dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="30dp"
            android:text="@string/activity_open_destination_option4_place" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/activity_open_destination_btn_home"
            style="@style/ButtonBarText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="switchHome"
            android:text="@string/activity_destination_home" />

        <Button
            android:id="@+id/activity_open_destination_btn_qr"
            style="@style/ButtonBarText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="switchQR"
            android:text="@string/activity_destination_qr" />

        <Button
            android:id="@+id/activity_open_destination_btn_settings"
            style="@style/ButtonBarText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="switchSettings"
            android:text="@string/activity_destination_settings" />
    </LinearLayout>

    <Button
        android:id="@+id/activity_open_destination_btn_start"
        style="@style/ButtonText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:onClick="switchExplore"
        android:text="@string/activity_open_destination_start_exploration"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_open_destination_radiogroup"
        app:layout_constraintVertical_bias="0.49" />

</androidx.constraintlayout.widget.ConstraintLayout>