<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:orientation="vertical">


    <TextView
        android:id="@+id/popup_title"
        style="@style/HeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/popup_title" />

    <ImageView
        android:id="@+id/popup_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/boydorr" />

    <TextView
        android:id="@+id/popup_text"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/building_popup_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/popup_close"
        style="@style/ButtonBarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popup_close" />
</LinearLayout>