<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/activity_qr_fl_preview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </FrameLayout>

            <TextView
                android:id="@+id/activity_qr_tv_info"
                style="@style/OverlayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="20dp"
                android:padding="5dp"
                android:gravity="center"
                android:text="@string/activity_qr_text" />

            <ImageView
                android:id="@+id/activity_qr_box"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/activity_qr_rect"
                app:srcCompat="@drawable/rectangle" />

            <ImageButton
                android:id="@+id/activity_qr_btn_capture"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="60dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/activity_qr_capture"
                android:onClick="buildingPopup"
                app:srcCompat="@drawable/capture" />

            <ImageButton
                android:id="@+id/activity_qr_btn_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/activity_qr_info"
                android:onClick="infoPopup"
                app:srcCompat="@drawable/info" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>